src/schema/snapshots/schermz__schema__tests__discriminator_picks_smaller_cardinality_then_alphabetical.snap
---
source: src/schema/tests.rs
assertion_line: 575
expression: "Schema::from_json(&json, &default_config()).to_json()"
---
{
  "items": {
    "types": [
      {
        "ARRAY": [
          {
            "extra": {
              "types": [
                "NUMBER"
              ],
              "values": [
                1
              ]
            },
            "kind": {
              "discriminator": true,
              "types": [
                "STRING(1)"
              ],
              "values": [
                "a"
              ]
            },
            "tag": {
              "types": [
                "STRING(2)"
              ],
              "values": [
                "x1",
                "x2"
              ]
            }
          },
          {
            "kind": {
              "discriminator": true,
              "types": [
                "STRING(1)"
              ],
              "values": [
                "b"
              ]
            },
            "other": {
              "types": [
                "NUMBER"
              ],
              "values": [
                1
              ]
            },
            "tag": {
              "types": [
                "STRING(2)"
              ],
              "values": [
                "y1",
                "y2"
              ]
            }
          },
          {
            "kind": {
              "discriminator": true,
              "types": [
                "STRING(1)"
              ],
              "values": [
                "c"
              ]
            },
            "more": {
              "types": [
                "NUMBER"
              ],
              "values": [
                1
              ]
            },
            "tag": {
              "types": [
                "STRING(2)"
              ],
              "values": [
                "z1",
                "z2"
              ]
            }
          }
        ],
        "discriminator": "kind"
      }
    ]
  }
}
