src/schema/snapshots/schermz__schema__tests__discriminator_skipped_for_single_variant.snap
---
source: src/schema/tests.rs
assertion_line: 620
expression: "Schema::from_json(&json, &default_config()).to_json()"
---
{
  "items": {
    "types": [
      {
        "ARRAY": [
          {
            "status": {
              "types": [
                "STRING(2)"
              ],
              "values": [
                "ok"
              ]
            },
            "v": {
              "types": [
                "NUMBER"
              ],
              "values": [
                1,
                2
              ]
            }
          }
        ]
      }
    ]
  }
}
