src/schema/snapshots/schermz__schema__tests__discriminator_skipped_with_merge_objects.snap
---
source: src/schema/tests.rs
assertion_line: 632
expression: "Schema::from_json(&json, &merged_config()).to_json()"
---
{
  "items": {
    "types": [
      {
        "ARRAY": [
          {
            "a": {
              "optional": true,
              "types": [
                "NUMBER"
              ],
              "values": [
                1
              ]
            },
            "b": {
              "optional": true,
              "types": [
                "NUMBER"
              ],
              "values": [
                2
              ]
            },
            "status": {
              "types": [
                "STRING(6, 8)"
              ],
              "values": [
                "in_force",
                "opened"
              ]
            }
          }
        ]
      }
    ]
  }
}
