src/schema/snapshots/schermz__schema__tests__empty_nested_object_and_array.snap
---
source: src/schema/tests.rs
assertion_line: 58
expression: "Schema::from_json(&json, false).to_json()"
---
{
  "empty_obj": {
    "types": [
      {}
    ]
  }
}
