src/schema/snapshots/schermz__schema__tests__empty_root_array.snap
---
source: src/schema/tests.rs
assertion_line: 36
expression: "Schema::from_json(&json, false).to_json()"
---
{}
