src/schema/snapshots/schermz__schema__tests__empty_root_object.snap
---
source: src/schema/tests.rs
assertion_line: 30
expression: "Schema::from_json(&json, false).to_json()"
---
{}
