src/schema/snapshots/schermz__schema__tests__float_numbers_skip_values.snap
---
source: src/schema/tests.rs
assertion_line: 476
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "price": {
    "types": [
      "NUMBER"
    ]
  }
}
