src/schema/snapshots/schermz__schema__tests__integer_only_numbers_emit_values_sorted_numerically.snap
---
source: src/schema/tests.rs
assertion_line: 465
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "code": {
    "types": [
      "NUMBER"
    ],
    "values": [
      1,
      2,
      3,
      5,
      8
    ]
  }
}
