src/schema/snapshots/schermz__schema__tests__long_strings_skip_values_even_below_threshold.snap
---
source: src/schema/tests.rs
assertion_line: 453
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "blob": {
    "types": [
      "STRING(5, 250)"
    ]
  }
}
